adicionando as features doadministrador
