# src/routes/index.routes.ts
@@ -14,12 +14,13 @@ import { professores_routes } from "./users/Professor.routes";
 import { disciplinas_routes } from "./school/Disciplinas.routes";
 import { escolher_professor_routes } from "./school/EscolherProfessor.routes";
 import { notas_routes } from "./school/classroom/Nota.routes";
+import { administradores_routes } from "./users/Administrador.routes";
 
 const routes = express();
 
 routes.use( express.json());
 routes.use("/files" , express.static("public/uploads"))
-routes.use("/api-docs", SwaggerUi.serve , SwaggerUi.setup(swaggerDocs , { explorer : true}))
+routes.use("/api-docs", SwaggerUi.serve , SwaggerUi.setup(swaggerDocs))
 routes.use(estudantes_routes)
 routes.use(pais_routes)
 routes.use(provincia_routes)
@@ -32,6 +33,7 @@ routes.use(professores_routes)
 routes.use(disciplinas_routes)
 routes.use(escolher_professor_routes)
 routes.use(notas_routes)
+routes.use(administradores_routes)
 
 routes.post("/upload" , upload.single("file") , (req, res) =>{
     return res.json(req.file?.originalname)
